--- a/index.html
+++ b/index.html
@@ -35,73 +35,83 @@
           </ul>
         </div>
       </div>
-      <div class="container header-panel">
-        <p class="title"> Интернет-магазин <br>
-          строительных материалов <br>
-          и инструментов для ремонта
-        </p>
-        <section class="contact-info-header">
-          <h2 class="visually-hidden">Контактный телефон:</h2>
-          <span>+7 (812) 555-05-55</span>
-          <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
-        </section>
-        <ul class="user-panel">
-        <li><button type="button" name="sign-in">Войти</button></li>
-        <li><button type="button" name="sign-up">Регистрация</button></li>
-        </ul>
-        <nav class="header-navigation container">
-          <ul>
-            <li><a href="index.html">Главная</a></li>
-            <li><a href="#">Компания</a></li>
-            <li><a href="catalog.html">Каталог</a></li>
-            <li><a href="#">Новости</a></li>
-            <li><a href="#">Спецпредложения</a></li>
-            <li><a href="#">Доставка</a></li>
-            <li><a href="#">Контакты</a></li>
+      <div class="lightblue-background">
+        <div class="container header-panel">
+          <p class="title"> Интернет-магазин <br>
+            строительных материалов <br>
+            и инструментов для ремонта
+          </p>
+          <section class="contact-info-header">
+            <h2 class="visually-hidden">Контактный телефон:</h2>
+            <span>+7 (812) 555-05-55</span>
+            <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
+          </section>
+          <ul class="user-panel">
+          <li class="sign-in"><button type="button" name="sign-in">Войти</button></li>
+          <li><button type="button" name="sign-up">Регистрация</button></li>
           </ul>
-        </nav>
+          <nav class="header-navigation container">
+            <ul>
+              <li><a href="index.html">Главная</a></li>
+              <li><a href="#">Компания</a></li>
+              <li><a href="catalog.html">Каталог</a></li>
+              <li><a href="#">Новости</a></li>
+              <li><a href="#">Спецпредложения</a></li>
+              <li><a href="#">Доставка</a></li>
+              <li><a href="#">Контакты</a></li>
+            </ul>
+          </nav>
+        </div>
       </div>
     </header>
     <main>
-    <div class="container elements-catalog-1">
-      <section class="elements-catalog-list element-1">
-        <h2>Материалы</h2>
-        <a href="#">На любой вкус</a>
-        <!-- <img src="img/materials.svg" alt="Иконка материалов">
-        <img src="img/icon-new.png" alt=""> -->
-      </section>
-      <section class="elements-catalog-list element-2">
-        <h2>Инструмент</h2>
-        <a href="#">На все случаи</a>
-      </section>
-      <section class="elements-catalog-list element-3">
-        <h2>Техника</h2>
-        <a href="#">Для стройки</a>
-      </section>
-      <section class="element-4">
-        <!-- <div class="first-slider">
-          <h2>Перфораторы</h2>
-          <p>Настоящие мужские игрушки</p>
-          <a href="#"><img src="img/left-slider.svg" alt="Кнопка влево"></a>
-          <a href="#"><img src="img/right-slider.svg" alt="Кнопка вправо"></a>
-          <a href="catalog.html" class="catalog-btn">Открыть каталог</a>
-        </div> -->
-        <div class="second-slider">
-          <h2>Дрели</h2>
-          <p>Соседям на радость!</p>
-          <a href="#"><img src="img/left-slider.svg" alt="Кнопка влево"></a>
-          <a href="#"><img src="img/right-slider.svg" alt="Кнопка вправо"></a>
-          <a href="catalog.html" class="catalog-btn">Открыть каталог</a>
+    <div class="container m-top m-bottom">
+      <div class="container-elements-first-line">
+        <section class="elements-catalog-list element-1">
+          <h2>Материалы</h2>
+          <a href="#">На любой вкус</a>
+          <!-- <img src="img/materials.svg" alt="Иконка материалов">
+          <img src="img/icon-new.png" alt=""> -->
+        </section>
+        <section class="elements-catalog-list element-2">
+          <h2>Инструмент</h2>
+          <a href="#">На все случаи</a>
+        </section>
+        <section class="elements-catalog-list element-3">
+          <h2>Техника</h2>
+          <a href="#">Для стройки</a>
+        </section>
+      </div>
+      <div class="container-elements-second-line">
+        <div class="big-element">
+          <section class="element-4">
+            <!-- <div class="first-slider">
+              <h2>Перфораторы</h2>
+              <p>Настоящие мужские игрушки</p>
+              <a href="#"><img src="img/left-slider.svg" alt="Кнопка влево"></a>
+              <a href="#"><img src="img/right-slider.svg" alt="Кнопка вправо"></a>
+              <a href="catalog.html" class="catalog-btn">Открыть каталог</a>
+            </div> -->
+            <div class="second-slider">
+              <h2 class="mp-null">Дрели</h2>
+              <p>Соседям на радость!</p>
+              <a href="#"><img src="img/left-slider.svg" alt="Кнопка влево"></a>
+              <a href="#"><img src="img/right-slider.svg" alt="Кнопка вправо"></a>
+              <a href="catalog.html" class="catalog-btn">Открыть каталог</a>
+            </div>
+          </section>
         </div>
-      </section>
-      <section class="elements-catalog-list element-5">
-        <h2>Скидки 50%</h2>
-        <a href="#">На 350 товаров</a>
-      </section>
-      <section class="elements-catalog-list element-6">
-        <h2>Доставка</h2>
-        <a href="#">Бесплатно</a>
-      </section>
+        <div class="small-elements">
+          <section class="elements-catalog-list element-5">
+            <h2>Скидки 50%</h2>
+            <a href="#">На 350 товаров</a>
+          </section>
+          <section class="elements-catalog-list element-6">
+            <h2>Доставка</h2>
+            <a href="#">Бесплатно</a>
+          </section>
+        </div>
+      </div>
     </div>
       <section class="container catalog">
         <div class="section-header">
@@ -155,7 +165,7 @@
           </li>
         </ul>
       </section>
-      <section class="container popular-manufaturers">
+      <section class="container popular-manufaturers m-bottom">
         <div class="section-header">
           <h2>Популярные производители</h2>
           <a href="#" class="section-header-btn">Все производители</a>
@@ -203,72 +213,80 @@
           </li>
         </ul>
       </section>
-      <section class="container services">
-        <h2>Сервисы</h2>
-        <p>Хороший интернет-магазин отличается от плохого не только ценами! <br>
-          Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
-        <ul>
-          <li>
-            <button type="button">Доставка</button>
-              <h3>Доставка</h3>
-              <p>
-                Мы с удовольствием доставим ваш товар прямо <br>
-                к вашему подъезду совершенно бесплатно! <br>
-                Ведь мы неплохо заработаем, <br>
-                поднимая его на ваш этаж!
-              </p>
-              <img src="img/delivery.png" alt="">
-          </li>
-          <!-- <li>
+      <div class="lightblue-background m-bottom">
+        <section class="container services">
+          <h2>Сервисы</h2>
+          <p>Хороший интернет-магазин отличается от плохого не только ценами! <br>
+            Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
+          <div class="services-sliders">
+            <div class="slider-btn">
+              <button type="button">Доставка</button>
               <button type="button">Гарантия</button>
-              <h3 class="guarantee">Гарантия</h3>
-              <p>
-                Если купленный у нас товар поломается или заискрит, <br>
-                а также в случае пожара, спровоцированного его возгоранием, <br>
-                вы всегда можете быть уверены в нашей гарантии. Мы обменяем <br>
-                сгоревший товар на новый. <br>
-                Дом уж восстановите как-нибудь сами.
-              </p>
-              <img src="img/guarantee.png" alt="">
-          </li>
-          <li>
-            <button type="button">Кредит</button>
-            <h3>Кредит</h3>
-            <p>
-              Залезть в долговую яму стало проще! <br>
-              Кредитные консультанты придут вам на помощь.
-            </p>
-            <img src="img/credit.png" alt="">
-          </li> -->
-        </ul>
-      </section>
-      <div class="container info">
-      <section class="about-company">
-        <h2>Компания "Техномарт"</h2>
-        <p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и<br>
-          строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.</p>
-        <p>Мы можем доставить ваш товар в самые отдаленные точки России!<br>
-          Техномарт работает со многими транспортными компаниями:</p>
-        <ul>
-          <li>Деловые линии</li> <br>
-          <li>Автотрейдинг</li> <br>
-          <li>ЖелДорЭкспедиция</li> <br>
-        </ul>
-        <a href="#">Подробнее о компании</a>
-      </section>
-      <section class="contacts">
-        <h2>Контакты</h2>
-        <p>Вы можете забрать товар сами, <br>
-          заехав в наш офис:</p>
-          <img src="img/map.png" width="300" height="158" alt="Карта расположения офиса компании"> <br>
-        <button type="button" name="contact-us">Заблудились? Напишите нам!</button>
-      </section>
+              <button type="button">Кредит</button>
+            </div>
+            <ul>
+              <li>
+                <h3>Доставка</h3>
+                <p>
+                  Мы с удовольствием доставим ваш товар прямо <br>
+                  к вашему подъезду совершенно бесплатно! <br>
+                  Ведь мы неплохо заработаем, <br>
+                  поднимая его на ваш этаж!
+                </p>
+                <!-- <img src="img/delivery.png" alt=""> -->
+              </li>
+              <!-- <li>
+                <h3 class="guarantee">Гарантия</h3>
+                <p>
+                  Если купленный у нас товар поломается или заискрит, <br>
+                  а также в случае пожара, спровоцированного его возгоранием, <br>
+                  вы всегда можете быть уверены в нашей гарантии. Мы обменяем <br>
+                  сгоревший товар на новый. <br>
+                  Дом уж восстановите как-нибудь сами.
+                </p>
+                <img src="img/guarantee.png" alt="">
+              </li>
+              <li>
+                <h3>Кредит</h3>
+                <p>
+                  Залезть в долговую яму стало проще! <br>
+                  Кредитные консультанты придут вам на помощь.
+                </p>
+                <img src="img/credit.png" alt="">
+              </li> -->
+            </ul>
+          </div>
+        </section>
       </div>
-      <section class="visually-hidden">
-        <h2 class="visually-hidden">Как до нас добраться</h2>
-        <img src="img/map-popup.png" alt="Офис компании по адресу ул. Большая Конюшенная 19/8, Санкт-Петербург" width="940" height="446">
-        <button type="button">Закрыть</button>
-      </section>
+      <div class="container">
+        <div class="info">
+          <section class="about-company">
+            <h2>Компания "Техномарт"</h2>
+            <p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и<br>
+              строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.</p>
+            <p>Мы можем доставить ваш товар в самые отдаленные точки России!<br>
+              Техномарт работает со многими транспортными компаниями:</p>
+            <ul>
+              <li>Деловые линии</li> <br>
+              <li>Автотрейдинг</li> <br>
+              <li>ЖелДорЭкспедиция</li> <br>
+            </ul>
+            <a href="#">Подробнее о компании</a>
+          </section>
+          <section class="contacts">
+            <h2>Контакты</h2>
+            <p>Вы можете забрать товар сами, <br>
+              заехав в наш офис:</p>
+              <img src="img/map.png" width="300" height="158" alt="Карта расположения офиса компании">
+            <button type="button" name="contact-us">Заблудились? Напишите нам!</button>
+          </section>
+        </div>
+        <section class="visually-hidden">
+          <h2 class="visually-hidden">Как до нас добраться</h2>
+          <img src="img/map-popup.png" alt="Офис компании по адресу ул. Большая Конюшенная 19/8, Санкт-Петербург" width="940" height="446">
+          <button type="button">Закрыть</button>
+        </section>
+      </div>
       <section class="visually-hidden">
         <h2 class="visually-hidden">Форма обратной связи</h2>
         <form class="" action="https://echo.htmlacademy.ru" method="post">
@@ -284,43 +302,55 @@
       </section>
     </main>
     <footer>
-      <section class="first-footer">
-        <a href="index.html" class="logo-footer">
-        <img src="img/logo.svg" width="138" height="23" alt="Логотип интернет-магазина «Техномарт»">
-        </a>
-      <nav class="site-navigation">
-        <ul>
-          <li><a href="#">Компания</a></li>
-          <li><a href="#">Новости</a></li>
-          <li><a href="catalog.html">Каталог</a></li>
-          <li><a href="#">Доставка</a></li>
-          <li><a href="#">Контакты</a></li>
-        </ul>
-      </nav>
-      <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 <br>
-      +7 (812) 555-05-55</p>
-      <nav class="catalog-navigation">
-        <ul>
-          <li><a href="#">Материалы</a></li>
-          <li><a href="#">Техника</a></li>
-          <li><a href="#">Инструмент</a></li>
-          <li><a href="#">Спецпредложения</a></li>
-        </ul>
-      </nav>
-      </section>
-      <section class="second-footer">
-      <p>© 2010–2019 Компания «Техномарт» <br>
-        Все права защищены</p>
-      <div>
-        <a href="https://vk.com/rewoop"><img src="img/vk.svg" alt="Вкотакте"></a>
-        <a href="#"><img src="img/facebook.svg" alt="Фэйсбук"></a>
-        <a href="#"><img src="img/instagram.svg" alt="Инстаграм"></a>
+      <div class="first-footer-background">
+        <section class="container first-footer-section">
+        <div class="first-footer">
+          <div class="logo-footer">
+            <a href="index.html">
+            <img src="img/logo.svg" width="138" height="23" alt="Логотип интернет-магазина «Техномарт»">
+            </a>
+          </div>
+          <div class="site-navigation">
+            <ul>
+              <li><a href="#">Компания</a></li>
+              <li><a href="#">Новости</a></li>
+              <li><a href="catalog.html">Каталог</a></li>
+              <li><a href="#">Доставка</a></li>
+              <li><a href="#">Контакты</a></li>
+            </ul>
+          </div>
+        </div>
+        <nav class="catalog-navigation">
+          <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 <br>
+          +7 (812) 555-05-55</p>
+          <ul>
+            <li><a href="#">Материалы</a></li>
+            <li><a href="#">Техника</a></li>
+            <li><a href="#">Инструмент</a></li>
+            <li><a href="#">Спецпредложения</a></li>
+          </ul>
+        </nav>
+        </section>
       </div>
-      <p>Обратная связь: <br>
-        <a href="#">mail@htmlacademy.ru</a></p>
-      <p>Разработано — <br>
-        <a href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a></p>
-      </section>
+      <div class="second-footer-background">
+        <section class="container second-footer">
+          <div class="copyright">
+            <p>© 2010–2019 Компания «Техномарт» <br>
+              Все права защищены</p>
+          </div>
+          <div class="social-media">
+            <a href="https://vk.com/rewoop"><img src="img/vk.svg" alt="Вкотакте"></a>
+            <a href="#"><img src="img/facebook.svg" alt="Фэйсбук"></a>
+            <a href="#"><img src="img/instagram.svg" alt="Инстаграм"></a>
+          </div>
+          <div class="feedback-developer">
+            <p>Обратная связь: <br>
+              <a href="#">mail@htmlacademy.ru</a></p>
+            <p>Разработано — <br>
+              <a href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a></p>
+          </div>
+        </section>
+      </div>
     </footer>
   </body>
 </html>
