Изменил поведение иконок при наведении и клике

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       </div>
     </header>
     <main>
-    <div class="container m-top m-bottom">
+    <div class="container m-top-60 m-bottom-60">
       <div class="container-elements-first-line">
         <section class="elements-catalog-list element-1">
           <h2>Материалы</h2>
@@ -94,7 +94,7 @@
             </div> -->
             <div class="second-slider">
               <h2 class="mp-null">Дрели</h2>
-              <p>Соседям на радость!</p>
+              <p class="mp-null">Соседям на радость!</p>
               <a href="#"><img src="img/left-slider.svg" alt="Кнопка влево"></a>
               <a href="#"><img src="img/right-slider.svg" alt="Кнопка вправо"></a>
               <a href="catalog.html" class="catalog-btn">Открыть каталог</a>
@@ -165,7 +165,7 @@
           </li>
         </ul>
       </section>
-      <section class="container popular-manufaturers m-bottom">
+      <section class="container popular-manufaturers m-bottom-60">
         <div class="section-header">
           <h2>Популярные производители</h2>
           <a href="#" class="section-header-btn">Все производители</a>
@@ -213,7 +213,7 @@
           </li>
         </ul>
       </section>
-      <div class="lightblue-background m-bottom">
+      <div class="lightblue-background m-bottom-60">
         <section class="container services">
           <h2>Сервисы</h2>
           <p>Хороший интернет-магазин отличается от плохого не только ценами! <br>
@@ -339,9 +339,9 @@
               Все права защищены</p>
           </div>
           <div class="social-media">
-            <a href="https://vk.com/rewoop"><img src="img/vk.svg" alt="Вкотакте"></a>
-            <a href="#"><img src="img/facebook.svg" alt="Фэйсбук"></a>
-            <a href="#"><img src="img/instagram.svg" alt="Инстаграм"></a>
+            <a href="https://vk.com/rewoop"><div><img src="img/vk.svg" alt="Вкотакте" width="26" height="15"></div></a>
+            <a href="#"><div><img src="img/facebook.svg" alt="Фэйсбук" width="12" height="22"></div></a>
+            <a href="#"><div><img src="img/instagram.svg" alt="Инстаграм" width="21" height="21"></div></a>
           </div>
           <div class="feedback-developer">
             <p>Обратная связь: <br>
