Настроил сетку фильтров на странице каталога.

--- a/catalog.html
+++ b/catalog.html
@@ -112,21 +112,29 @@
                   </div>
                 </div>
               </fieldset>
+              <span class="section-separator"></span>
               <fieldset class="mp-null">
                 <legend class="second-legend">Производители:</legend>
-                <input id="bosch" type="checkbox" name="bosch" value="">
-                <label for="bosch">BOSCH</label>
-                <input id="interskol" type="checkbox" name="interskol" value="">
-                <label for="interskol">Интерскол</label>
-                <input id="makita" type="checkbox" name="makita" value="">
-                <label for="makita">Makita</label>
-                <input id="dewalt" type="checkbox" name="dewalt" value="">
-                <label for="dewalt">Dewalt</label>
-                <input id="hitachi" type="checkbox" name="hitachi" value="">
-                <label for="hitachi">Hitachi</label>
+                <div class="manufactures">
+                  <div class="manufactures-input">
+                    <input id="bosch" type="checkbox" name="bosch" value="">
+                    <input id="interskol" type="checkbox" name="interskol" value="">
+                    <input id="makita" type="checkbox" name="makita" value="">
+                    <input id="dewalt" type="checkbox" name="dewalt" value="">
+                    <input id="hitachi" type="checkbox" name="hitachi" value="">
+                  </div>
+                  <div class="manufactures-label">
+                    <label for="bosch">BOSCH</label>
+                    <label for="interskol">Интерскол</label>
+                    <label for="makita">Makita</label>
+                    <label for="dewalt">Dewalt</label>
+                    <label for="hitachi">Hitachi</label>
+                  </div>
+                </div>
               </fieldset>
+              <span class="section-separator"></span>
               <fieldset class="mp-null">
-                <legend>Питание:</legend>
+                <legend class="third-legend">Питание:</legend>
                 <input id="rechargeable" type="radio" name="power" value="rechargeable" checked>
                 <label for="rechargeable">Аккумуляторные</label>
                 <input id="network" type="radio" name="power" value="network">
